# esp-ntp

./: .gitignore  Cargo.toml  README.md
esp/: Cargo.toml  Makefile  sdkconfig.defaults
esp/.cargo/: config.toml
esp/src/: clock.rs  clock_face.rs  http.rs  main.rs  max7219.rs  metrics.rs  uart.rs  wifi.rs
ntp/: Cargo.toml  README.md
ntp/src/: bin.rs  lib.rs  proto.rs  server.rs
ubx/: Cargo.toml
ubx/src/: bin.rs  helpers.rs  lib.rs  proto.rs  proto_cfg.rs  proto_nav.rs
ubx/tests/: integration_test.rs
