[package]
name = "esp"
version = "0.1.0"
authors = ["David Ventura <davidventura27@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
ntp = { version = "0.0.0", path = "../ntp" }
ubx = { version = "0.0.0", path = "../ubx" }
log = { version = "0.4", default-features = false }

esp-idf-svc = { version = "0.48", default-features = false }
esp-idf-hal = "0.43.1"
esp-idf-sys = "0.34.1"

heapless = "0.8.0"
libc = "0.2.153"

chrono = { version = "0.4.34", default-features = false, features = ["alloc"] }
chrono-tz = { version = "0.8.6", features = ["filter-by-regex"] }
serde_urlencoded = "0.7.1"
serde = { version = "1.0.197", features = ["derive"] }

[build-dependencies]
embuild = "0.31.3"
