[package]
name = "ntp"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# clock is only for bin
chrono = { version = "0.4.34", default-features = false, features = ["clock"] }

[lib]
name = "ntp"
path = "src/lib.rs"

[[bin]]
name = "ntp_server"
path = "src/bin.rs"
