[package]
name = "ubx"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bin = ["dep:serial2"]

[dependencies]
chrono = { version = "0.4.34", default-features = false}
serial2 = { version = "0.2.20", optional = true }
ntp = { path = "../ntp" }

[[bin]]
default-features = ["bin"]
name = "uart"
path = "src/bin.rs"
